--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,8 @@ node_modules
 pdf
 public
 linklint_logs
+bower_components
+source/_assets/bower_components
 source/.asset_pipeline
 npm-debug.log
 package-lock.json
